Oh right, it has to work with Java 8 still